--- a/TSP_GA.ipynb
+++ b/TSP_GA.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The possible paths between any 2 cities is (N-1).\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![image.png](https://github.com/Ratna04priya/Travelling-Salesman-Problem-using-Genetic-Algorithm/blob/master/tsp.png)\n",
     "\n",
     "\n",
     "\n"
@@ -46,7 +46,7 @@
     "2. Crossover : Recombines the entries to produce next generation.\n",
     "3. Mutation : Adds randomness to the reproduction process.\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](https://github.com/Ratna04priya/Travelling-Salesman-Problem-using-Genetic-Algorithm/blob/master/ga.png)"
    ]
   },
   {
